--- a/services/backend/package.json
+++ b/services/backend/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "devDependencies": {
     "@faker-js/faker": "^9.1.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.8.1",
     "eslint": "^9.13.0",
@@ -19,6 +20,7 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.1"
   }
 }
